--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Tulpep.NotificationWindow" Version="1.1.38" />
     <PackageReference Include="WebGrease" Version="1.6.0" />
   </ItemGroup>
 
